# r2lab-api

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_user_family.py  0003_slice_soft_delete.py  0004_slice_country.py  0005_user_names.py  0006_registration_request.py  0007_user_password_token.py
deploy/: .env.example  README.md  backups-rotate.service  backups-rotate.timer  backups-rotate.yaml  pg-upgrade.sh  r2lab-api.service  r2lab-backup.service  r2lab-backup.timer  restore-db.sh  setup.sh
r2lab_api/: app.py  auth.py  config.py  database.py  dependencies.py  mail.py  schemas.py
r2lab_api/models/: __init__.py  lease.py  registration.py  resource.py  slice.py  user.py
r2lab_api/routers/: auth.py  leases.py  registrations.py  resources.py  slices.py  stats.py  users.py
scripts/: HAND-SLICE-FAMILY.csv  bootstrap.py  check-mail-sending.py  make-admin-token.py  migrate_from_plc.py  migrate_historical_leases.py  postgres-catchup-macos.sh  postgres-macos-catchup.sh  postgres-setup-fedora.sh  test-migration.sh
tests/: conftest.py  test_leases.py  test_registrations.py  test_resources.py  test_slices.py  test_stats.py
